--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,7 @@
     <script type="application/javascript" src="../delta_dashboard/public/js/firebaseTransfer.js"></script>
 
 
-    <!------------------------------------------- TOP ROW----------------------------------------------------------->
+    <!-- ----------------------------------------- TOP ROW--------------------------------------------------------- -->
     <div class="col s12 m6 l3">
         <div class="card blue-grey darken-1 hoverable top_row_card" id="card_test">
             <div class="slider blue-grey darken-1" id="solar_slider">
