Added code for buffer aggressiveness functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -269,10 +269,10 @@
                 <div class="input-field white-text center-align">
                     <select id="battery_buffer_select" class="center-align">
                         <option value="" disabled selected>Choose your option</option>
-                        <option value="buffer_aggressive">Aggressive</option>
-                        <option value="buffer_moderate">Moderate</option>
-                        <option value="buffer_conservative">Conservative</option>
-                        <option value="buffer_ultraconservative">Ultra Conservative</option>
+                        <option value="Aggressive">Aggressive</option>
+                        <option value="Balanced">Balanced</option>
+                        <option value="Conservative">Conservative</option>
+                        <option value="Ultra Conservative">Ultra Conservative</option>
                     </select>
                 </div>
                 <p class="center-align"><strong>Note: This mode will only work during Standalone: PV with Battery Backup
