Added the Delta logo into the nav bar. Removed duplicate download from Firebase on archive request/download

--- a/partials/nav.ejs
+++ b/partials/nav.ejs
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style>
         #logo {
-            width: 7%;
-            height: 7%;
+            width: 25%;
+            /*height: 7%;*/
             /*margin: auto;*/
             padding-left: 10px;
             /*display: inline-block;*/
@@ -14,6 +14,7 @@
         #imgWrapper {
             /*max-width: 0px;*/
             display: inline-block;
+            width: 25%
         }
     </style>
 
@@ -38,10 +39,12 @@
     <!--<a class="brand-logo"><img class="responsive-img" id="logo" src="../delta_dashboard/public/img/delta_logo.png"></a>-->
 
     <div class="nav-wrapper blue lighten-2">
-        <!--<div id="imgWrapper" class="brand-logo left">-->
-        <!--</div>-->
-        <!--<a class="brand-logo left"><img class="responsive-img" id="logo" src="../delta_dashboard/public/img/delta_logo.png"></a>-->
-        <a href="#" class="brand-logo">Logo</a>
+        <div id="imgWrapper" class="brand-logo left">
+            <a class="brand-logo left"><img class="responsive-img" id="logo"
+                                            src="../delta_dashboard/public/img/delta_logo.png"></a>
+        </div>
+
+        <!--<a href="#" class="brand-logo">Logo</a>-->
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/delta_dashboard">Dashboard</a></li>
             <li><a class="archive_dropdown_trigger" href="#!" data-target="archive_dropdown">Archive</a>
