--- a/views/index.ejs
+++ b/views/index.ejs
@@ -264,8 +264,8 @@
         <div class="card blue-grey darken-1 hoverable second_row_card">
             <div class="card-content white-text">
                 <span class="card-title center-align">Battery Buffering Usage</span>
-                <p class="center-align">How aggressive should the battery buffer be? The more aggressive, the less the
-                    battery is used.</p>
+                <p class="center-align">How aggressive should we be in using the battery. The more aggressive, the more the battery
+                will be used in standalone modes</p>
                 <div class="input-field white-text center-align">
                     <select id="battery_buffer_select" class="center-align">
                         <option value="" disabled selected>Choose your option</option>
