--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -1,11 +1,427 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="/desau_ocpp/public/css/materialize.min.css" media="screen,projection"/>
+    <style>
+        #master_row {
+            opacity: 0;
+            -webkit-transition: opacity 0.7s ease-in;
+            -moz-transition: opacity 0.7s ease-in;
+            -o-transition: opacity 0.7s ease-in;
+            transition: opacity 0.7s ease-in;
+        }
+
+        #master_row.load{
+            opacity: 1;
+        }
+
+        #btp_title {
+            font-size: 24px;
+            font-weight: 500;
+        }
+
+        #loading_id {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+        }
+
+        .top_row_card {
+            height: 200px;
+        }
+
+        .second_row_card {
+            height: 325px;
+        }
+
+        /*   Class for when element is pinned */
+        .pinned {
+            position: fixed !important;
+            z-index: 10;
+        }
+
+        /* Default style of the title */
+        #title {
+            margin: 0;
+            width: 100%;
+            padding: 20px;
+        }
+
+        #title_wrapper {
+            height: 100px;
+        }
+
+        /* Style of the title when unpinned */
+        .title_unpinned {
+            background-color: white;
+            color: black;
+            font-size: 4.2rem;
+            padding: 20px;
+            margin: 0;
+        }
+
+        /* Style of the title when pinned */
+        .title_pinned {
+            background-color: rgba(100, 181, 246, 0.85);
+            color: white;
+            font-size: 3rem;
+            padding: 15px
+
+        }
+
+
+    </style>
+
+    <script src="../delta_dashboard/public/js/jquery-3.3.1.js"></script>
+    <script src="../delta_dashboard/public/js/moment.js"></script>
+
+    <link type="text/css" rel="stylesheet" href="../delta_dashboard/public/css/nouislider.css"/>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        let config = {
+            apiKey: "AIzaSyCaxTOBofd7qrnbas5gGsZcuvy_zNSi_ik",
+            authDomain: "smart-charging-app.firebaseapp.com",
+            databaseURL: "https://smart-charging-app.firebaseio.com",
+            projectId: "smart-charging-app",
+            storageBucket: "",
+            messagingSenderId: "896921007938"
+        };
+        firebase.initializeApp(config);
+    </script>
+
+    <script src="../delta_dashboard/public/bower_components/chart.js/dist/Chart.min.js"></script>
+
 </head>
+
+<% include ../partials/nav.ejs %>
+
 <body>
-<h1>Hello!</h1>
+<!--<div class="container">-->
+<div id="title_wrapper">
+    <h1 class="center-align title_pushpin" id="title">Delta Solar Charging Station</h1>
+</div>
+
+<div class="preloader-wrapper big active" id="loading_id">
+    <div class="spinner-layer spinner-blue-only">
+        <div class="circle-clipper left">
+            <div class="circle"></div>
+        </div>
+        <div class="gap-patch">
+            <div class="circle"></div>
+        </div>
+        <div class="circle-clipper right">
+            <div class="circle"></div>
+        </div>
+    </div>
+</div>
+
+<div id="master_row" class="row">
+
+    <script type="application/javascript" src="../delta_dashboard/public/js/index2.js"></script>
+
+
+    <!-- ----------------------------------------- TOP ROW--------------------------------------------------------- -->
+    <div class="col s12 m6 l3">
+        <div class="card blue-grey darken-1 hoverable top_row_card" id="card_test">
+            <div class="slider blue-grey darken-1" id="solar_slider">
+                <ul class="slides blue-grey darken-1">
+                    <li>
+                        <div class="card-content white-text">
+                            <span class="card-title center-align">Solar Generated Today</span>
+                            <h4 class="center-align" id="dctp_card"></h4>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m6 l3">
+        <div class="card blue-grey darken-1 hoverable top_row_card">
+            <div class="slider blue-grey darken-1" id="utility_slider">
+                <ul class="slides blue-grey darken-1">
+                    <li>
+                        <div class="card-content white-text">
+                            <span class="card-title center-align">Power Exported Today</span>
+                            <h4 class="center-align" id="utility_p_export_card"></h4>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card-content white-text blue-grey darken-1">
+                            <span class="card-title center-align">Power Imported Today</span>
+                            <h4 class="center-align" id="utility_p_import_card"></h4>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m6 l3">
+        <div class="card blue-grey darken-1 hoverable top_row_card">
+            <div class="slider blue-grey darken-1" id="bt_slider">
+                <ul class="slides blue-grey darken-1">
+                    <li>
+                        <div class="card-content white-text">
+                            <span class="card-title center-align">Battery SOC</span>
+                            <h4 class="center-align" id="btsoc_card"></h4>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card-content white-text blue-grey darken-1">
+                            <span class="card-title center-align">BT Consumed Today</span>
+                            <h4 class="center-align" id="bt_consumed_card">Hello there!</h4>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card-content white-text blue-grey darken-1">
+                            <span class="card-title center-align">BT Charged Today</span>
+                            <h4 class="center-align" id="bt_charged_card">Hello there!</h4>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m6 l3">
+        <div class="card blue-grey darken-1 hoverable top_row_card" id="card_test1">
+            <div class="card-content white-text">
+                <span class="card-title center-align">Charging Mode</span>
+                <p class="center-align">Your current charging mode is</p>
+                <div class="input-field white-text center-align">
+                    <select id="chargemode_select" class="center-align">
+                        <option value="" disabled selected>Choose your option</option>
+                        <option value="PV_with_BT">Standalone: PV with Battery Backup</option>
+                        <option value="MAX_CHARGE_STANDALONE">Standalone: Maximise EV Charge Rate</option>
+                        <option value="PV_no_BT">BETA: PV Standalone without BT</option>
+                        <option value="MAX_CHARGE_GRID">Grid Connected: Maximise EV Charge Rate</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!------------------------------------------- TOP ROW----------------------------------------------------------->
+    <!-------------------------------------------------------------------------------------------------------------->
+    <!------------------------------------------- SECOND ROW-------------------------------------------------------->
+    <div class="col s12 m6 l4">
+        <div class="card blue-grey darken-1 hoverable second_row_card">
+            <div class="slider blue-grey darken-1" id="solar_history_slider">
+                <ul class="slides blue-grey darken-1">
+                    <li>
+                        <div class="card-content white-text">
+                            <span class="card-title center-align">Solar Generation History</span>
+                            <div style="height:215px">
+                                <canvas id="solar_history_bar"></canvas>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m6 l5">
+        <div class="card blue-grey darken-1 hoverable second_row_card">
+            <div class="slider blue-grey darken-1" id="charge_history_slider">
+                <ul class="slides blue-grey darken-1">
+                    <li>
+                        <div class="card-content white-text">
+                            <span class="card-title center-align" id="last_ev_charging_session_title"></span>
+                            <div style="height:215px">
+                                <canvas id="last_ev_charge_session_line"></canvas>
+                            </div>
+                        </div>
+                    </li>
+                    <!--<li>-->
+                    <!--<div class="card-content white-text">-->
+                    <!--<span class="card-title center-align">Last EV Charging Session</span>-->
+                    <!--<h4 class="center-align" id="">Pie Chart</h4>-->
+                    <!--</div>-->
+                    <!--</li>-->
+                    <li>
+                        <div class="card-content white-text">
+                            <span class="card-title center-align">EV Charging History</span>
+                            <div style="height:215px">
+                                <canvas id="charging_history_bar"></canvas>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m6 l3">
+        <div class="card blue-grey darken-1 hoverable second_row_card">
+            <div class="card-content white-text">
+                <span class="card-title center-align">Battery Buffering Usage</span>
+                <p class="center-align">How aggressive should we be in using the battery. The more aggressive, the more the battery
+                    will be used in standalone modes</p>
+                <div class="input-field white-text center-align">
+                    <select id="battery_buffer_select" class="center-align">
+                        <option value="" disabled selected>Choose your option</option>
+                        <option value="Aggressive">Aggressive</option>
+                        <option value="Balanced">Balanced</option>
+                        <option value="Conservative">Conservative</option>
+                        <option value="Ultra Conservative">Ultra Conservative</option>
+                    </select>
+                </div>
+                <p class="center-align"><strong>Note: This mode will only work during Standalone: PV with Battery Backup
+                        mode</strong></p>
+            </div>
+        </div>
+    </div>
+    <!------------------------------------------- SECOND ROW-------------------------------------------------------->
+    <!-------------------------------------------------------------------------------------------------------------->
+    <!------------------------------------------- THIRD ROW--------------------------------------------------------->
+    <div class="col s12 m4 l4">
+        <div class="card amber lighten-3 z-depth-2 hoverable">
+            <div class="card-content amber lighten-2">
+                        <span class="card-title activator black-text text-darken-4 center-align">
+                            Solar Power
+                            <i class="material-icons right">more_vert</i>
+                        </span>
+            </div>
+            <div class="card-image">
+                <canvas id="dcp" width="400" height="200"></canvas>
+            </div>
+
+            <div class="card-reveal amber lighten-3 hoverable">
+                        <span class="card-title black-text text-darken-4 center-align" id="dc_title">Solar Power
+                            <i class="material-icons right">close</i>
+                        </span>
+                <table class="">
+                    <thead>
+                    <tr>
+                        <th>Description</th>
+                        <th>Value</th>
+                    </tr>
+                    </thead>
+
+                    <tbody id="dcp_reveal_table"></tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m4 l4">
+        <div class="card cyan lighten-3 z-depth-2 hoverable">
+            <div class="card-content cyan lighten-2">
+                        <span class="card-title activator black-text text-darken-4 center-align">
+                            Grid Export/Import
+                            <i class="material-icons right">more_vert</i>
+                        </span>
+            </div>
+            <div class="card-image">
+                <canvas id="utility_chart" width="400" height="200"></canvas>
+            </div>
+            <div class="card-reveal cyan lighten-3">
+                        <span class="card-title black-text text-darken-4 center-align" id="utility_title">Grid Export/Import
+                            <i class="material-icons right">close</i>
+                        </span>
+                <table class="">
+                    <thead>
+                    <tr>
+                        <th>Description</th>
+                        <th>Value</th>
+                    </tr>
+                    </thead>
+
+                    <tbody id="utility_reveal_table"></tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <div class="col s12 m4 l4">
+        <div class="card green lighten-3 z-depth-2 hoverable">
+            <div class="card-content green lighten-2">
+                        <span class="card-title activator black-text text-darken-4 center-align">
+                            Battery Power
+                            <i class="material-icons right">more_vert</i>
+                        </span>
+            </div>
+            <div class="card-image">
+                <canvas id="btp_chart" width="400" height="200"></canvas>
+            </div>
+
+            <div class="card-reveal green lighten-3">
+                        <span class="card-title black-text text-darken-4 center-align" id="btp_title">Battery Power
+                            <i class="material-icons right">close</i>
+                        </span>
+                <table class="">
+                    <thead>
+                    <tr>
+                        <th>Description</th>
+                        <th>Value</th>
+                    </tr>
+                    </thead>
+
+                    <tbody id="btp_reveal_table"></tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <!------------------------------------------- THIRD ROW--------------------------------------------------------->
+    <!-------------------------------------------------------------------------------------------------------------->
+
+    <div class="col s12 m8 l8">
+        <div class="card green lighten-2 z-depth-2 hoverable">
+            <div class="card-content green lighten-1">
+                        <span class="card-title activator grey-text text-darken-4">
+                            EV Charging
+                        </span>
+            </div>
+            <div class="card-image">
+                <canvas id="ev_charging_chart" width="400" height="170"></canvas>
+            </div>
+
+        </div>
+    </div>
+    <div class="col s12 m4 l4">
+        <div class="card blue-grey darken hoverable">
+            <div class="card-content white-text">
+                <span class="card-title" id="evc_status">EV Disconnected</span>
+                <p id="evc_status_body"></p>
+                <table class="centered" id="evc_table">
+                    <thead>
+                    <tr>
+                        <th>Description</th>
+                        <th>Value</th>
+                    </tr>
+                    </thead>
+
+                    <tbody id="evc_table_body">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <!--<div class="col s12 m6 l3">-->
+    <!--<div class="card blue-grey darken-1 hoverable">-->
+    <!--<div class="card-content white-text">-->
+    <!--<span class="card-title center-align">Buffer Aggressiveness</span>-->
+    <!--&lt;!&ndash;<div id="test-slider"></div>&ndash;&gt;-->
+
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+
+</div>
+
+<!--</div>-->
+<script type="text/javascript" src="../delta_dashboard/public/js/materialize.min.js"></script>
+
 </body>
 
 </html>
