--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -193,7 +193,7 @@
     </div>
 
     <div class="col s12 m6 l3">
-        <div class="card blue-grey darken-1 hoverable top_row_card" id="card_test1">
+        <div class="card blue-grey darken-1 hoverable top_row_card">
             <div class="card-content white-text">
                 <span class="card-title center-align">Charging Mode</span>
                 <p class="center-align">Your current charging mode is</p>
@@ -231,32 +231,6 @@
 
     <div class="col s12 m6 l5">
         <div class="card blue-grey darken-1 hoverable second_row_card">
-            <div class="slider blue-grey darken-1" id="charge_history_slider">
-                <ul class="slides blue-grey darken-1">
-                    <li>
-                        <div class="card-content white-text">
-                            <span class="card-title center-align" id="last_ev_charging_session_title"></span>
-                            <div style="height:215px">
-                                <canvas id="last_ev_charge_session_line"></canvas>
-                            </div>
-                        </div>
-                    </li>
-                    <!--<li>-->
-                    <!--<div class="card-content white-text">-->
-                    <!--<span class="card-title center-align">Last EV Charging Session</span>-->
-                    <!--<h4 class="center-align" id="">Pie Chart</h4>-->
-                    <!--</div>-->
-                    <!--</li>-->
-                    <li>
-                        <div class="card-content white-text">
-                            <span class="card-title center-align">EV Charging History</span>
-                            <div style="height:215px">
-                                <canvas id="charging_history_bar"></canvas>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
         </div>
     </div>
 
@@ -374,12 +348,12 @@
     <!------------------------------------------- THIRD ROW--------------------------------------------------------->
     <!-------------------------------------------------------------------------------------------------------------->
 
-    <div class="col s12 m8 l8">
+    <div class="col s12 m12 l12">
         <div class="card green lighten-2 z-depth-2 hoverable">
             <div class="card-content green lighten-1">
-                        <span class="card-title activator grey-text text-darken-4">
-                            EV Charging
-                        </span>
+                <span class="card-title activator grey-text text-darken-4">
+                    EV Charging
+                </span>
             </div>
             <div class="card-image">
                 <canvas id="ev_charging_chart" width="400" height="170"></canvas>
@@ -387,39 +361,10 @@
 
         </div>
     </div>
-    <div class="col s12 m4 l4">
-        <div class="card blue-grey darken hoverable">
-            <div class="card-content white-text">
-                <span class="card-title" id="evc_status">EV Disconnected</span>
-                <p id="evc_status_body"></p>
-                <table class="centered" id="evc_table">
-                    <thead>
-                    <tr>
-                        <th>Description</th>
-                        <th>Value</th>
-                    </tr>
-                    </thead>
 
-                    <tbody id="evc_table_body">
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-
-    <!--<div class="col s12 m6 l3">-->
-    <!--<div class="card blue-grey darken-1 hoverable">-->
-    <!--<div class="card-content white-text">-->
-    <!--<span class="card-title center-align">Buffer Aggressiveness</span>-->
-    <!--&lt;!&ndash;<div id="test-slider"></div>&ndash;&gt;-->
-
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
 
 </div>
 
-<!--</div>-->
 <script type="text/javascript" src="../delta_dashboard/public/js/materialize.min.js"></script>
 
 </body>
