Added weather, latest charging session, refined ev charging graph and started on daily charger breakdown. Also added profile page for settings

--- a/partials/nav.ejs
+++ b/partials/nav.ejs
@@ -27,7 +27,7 @@
 </head>
 
 <ul id="user_dropdown" class="dropdown-content">
-    <li><a href="#">Profile</a></li>
+    <li><a href="/delta_dashboard/profile">Profile</a></li>
     <li><a href="#" onclick="signOut()">Signout</a></li>
 </ul>
 <ul id="archive_dropdown" class="dropdown-content">
