--- a/views/charging_history2.ejs
+++ b/views/charging_history2.ejs
@@ -71,148 +71,44 @@
 <div class="container">
     <h1 class="center-align">Charging History</h1>
     <div class="row" id="master_row">
-        <div class="col s12">
-            <div class="input-field white-text center-align">
-                <select id="select_charging_session" class="center-align">
-                    <option value="" disabled selected>Choose Charging Session</option>
-                </select>
-                <label for="select_charging_session">Choose Charging Session</label>
+        <!--<div class="col s12">-->
+            <!--<div class="input-field white-text center-align">-->
+                <!--<select id="select_charging_session" class="center-align">-->
+                    <!--<option value="" disabled selected>Choose Charging Session</option>-->
+                <!--</select>-->
+                <!--<label for="select_charging_session">Choose Charging Session</label>-->
+            <!--</div>-->
+        <!--</div>-->
+
+        <div class="col s2 push-l5 pull-l5">
+
+            <div class="input-field">
+                <input id="date_input" type="text" class="datepicker">
+                <label for="date_input">Select a Date</label>
             </div>
+
         </div>
+        <!--<div class="col s12" id="preloader">-->
+            <!--<div class="preloader-wrapper big active" id="loading_id">-->
+                <!--<div class="spinner-layer spinner-blue-only">-->
+                    <!--<div class="circle-clipper left">-->
+                        <!--<div class="circle"></div>-->
+                    <!--</div>-->
+                    <!--<div class="gap-patch">-->
+                        <!--<div class="circle"></div>-->
+                    <!--</div>-->
+                    <!--<div class="circle-clipper right">-->
+                        <!--<div class="circle"></div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
-        <div class="col s12" id="preloader">
-            <div class="preloader-wrapper big active" id="loading_id">
-                <div class="spinner-layer spinner-blue-only">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="gap-patch">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col s12" id="charging_history_tabs">
-            <ul class="tabs">
-                <li class="tab col s3">
-                    <a href="#charging_history_overview_tab">Overview</a>
-                </li>
-                <li class="tab col s3">
-                    <a href="#charging_history_chart_tab">Line Chart</a>
-                </li>
-                <li class="tab col s3">
-                    <a href="#charging_history_sankey_tab">Sankey Diagram</a>
-                </li>
-                <li class="tab col s3">
-                    <a href="#download_tab">Download Session Data</a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="row" id="charging_history_overview_tab">
-            <div class="col s12 m6 l6">
-                <div class="card blue-grey darken-1 hoverable">
-                    <div class="slider blue-grey darken-1" id="ac2p_slider">
-                        <ul class="slides blue-grey darken-1">
-                            <li>
-                                <div class="card-content white-text">
-                                    <span class="card-title center-align">Total Power Consumed</span>
-                                    <h4 class="center-align" id="ac2p_card"></h4>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col s12 m6 l6">
-                <div class="card blue-grey darken-1 hoverable">
-                    <div class="slider blue-grey darken-1" id="dctp_slider">
-                        <ul class="slides blue-grey darken-1">
-                            <li>
-                                <div class="card-content white-text">
-                                    <span class="card-title center-align">Solar Energy</span>
-                                    <h4 class="center-align" id="dctp_card"></h4>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col s12 m6 l6">
-                <div class="card blue-grey darken-1 hoverable">
-                    <div class="slider blue-grey darken-1" id="grid_slider">
-                        <ul class="slides blue-grey darken-1">
-                            <li>
-                                <div class="card-content white-text">
-                                    <span class="card-title center-align">Grid Power Imported</span>
-                                    <h4 class="center-align" id="utility_p_import_card"></h4>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="card-content white-text blue-grey darken-1">
-                                    <span class="card-title center-align">Grid Power Exported</span>
-                                    <h4 class="center-align" id="utility_p_export_card"></h4>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col s12 m6 l6">
-                <div class="card blue-grey darken-1 hoverable">
-                    <div class="slider blue-grey darken-1" id="bt_slider">
-                        <ul class="slides blue-grey darken-1">
-                            <li>
-                                <div class="card-content white-text blue-grey darken-1">
-                                    <span class="card-title center-align">Battery Consumed</span>
-                                    <h4 class="center-align" id="bt_consumed_card"></h4>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="card-content white-text blue-grey darken-1">
-                                    <span class="card-title center-align">Battery Charged</span>
-                                    <h4 class="center-align" id="bt_charged_card"></h4>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row" id="charging_history_chart_tab">
-            <div class="col s12">
-                <canvas id="charging_history_chart" width="400" height="200"></canvas>
-            </div>
-            <div class="row" id="reset_zoom_button_div">
-                <p class="center-align">
-                    <a class="waves-effect waves-light btn " id="reset_zoom_button">Reset Zoom</a>
-                </p>
-            </div>
-        </div>
-
-
-        <div class="row" id="charging_history_sankey_tab">
-            <div class="col s12">
-                <div id="sankey_basic"></div>
-                <!--style="width: 800px; height: 500px;"-->
-            </div>
-        </div>
-
-        <div class="row" id="download_tab">
-        </div>
     </div>
 </div>
 
 <script type="text/javascript" src="../delta_dashboard/public/js/materialize.min.js"></script>
-<script type="application/javascript" src="../delta_dashboard/public/js/charging_history.js"></script>
+<script type="application/javascript" src="../delta_dashboard/public/js/charging_history2.js"></script>
 
 
 </body>
