--- a/views/charging_history2.ejs
+++ b/views/charging_history2.ejs
@@ -42,7 +42,6 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <script src="../delta_dashboard/public/js/jquery-3.3.1.js"></script>
     <script src="../delta_dashboard/public/js/moment.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
     <script>
@@ -68,46 +67,93 @@
 <% include ../partials/nav.ejs %>
 
 <body>
-<div class="container">
-    <h1 class="center-align">Charging History</h1>
-    <div class="row" id="master_row">
-        <!--<div class="col s12">-->
-            <!--<div class="input-field white-text center-align">-->
-                <!--<select id="select_charging_session" class="center-align">-->
-                    <!--<option value="" disabled selected>Choose Charging Session</option>-->
-                <!--</select>-->
-                <!--<label for="select_charging_session">Choose Charging Session</label>-->
-            <!--</div>-->
-        <!--</div>-->
+<!--<div class="container">-->
+<h1 class="center-align">Charging History</h1>
+<div class="row" id="master_row">
+    <!--<div class="col s12">-->
+    <!--<div class="input-field white-text center-align">-->
+    <!--<select id="select_charging_session" class="center-align">-->
+    <!--<option value="" disabled selected>Choose Charging Session</option>-->
+    <!--</select>-->
+    <!--<label for="select_charging_session">Choose Charging Session</label>-->
+    <!--</div>-->
+    <!--</div>-->
 
-        <div class="col s2 push-l5 pull-l5">
+    <div class="col s2 push-l5 pull-l5">
 
-            <div class="input-field">
-                <input id="date_input" type="text" class="datepicker">
-                <label for="date_input">Select a Date</label>
-            </div>
-
+        <div class="input-field">
+            <input id="date_input" type="text" class="datepicker">
+            <label for="date_input">Select a Date</label>
         </div>
-        <!--<div class="col s12" id="preloader">-->
-            <!--<div class="preloader-wrapper big active" id="loading_id">-->
-                <!--<div class="spinner-layer spinner-blue-only">-->
-                    <!--<div class="circle-clipper left">-->
-                        <!--<div class="circle"></div>-->
-                    <!--</div>-->
-                    <!--<div class="gap-patch">-->
-                        <!--<div class="circle"></div>-->
-                    <!--</div>-->
-                    <!--<div class="circle-clipper right">-->
-                        <!--<div class="circle"></div>-->
-                    <!--</div>-->
+    </div>
+    <!--<div class="col s12" id="preloader">-->
+    <!--<div class="preloader-wrapper big active" id="loading_id">-->
+    <!--<div class="spinner-layer spinner-blue-only">-->
+    <!--<div class="circle-clipper left">-->
+    <!--<div class="circle"></div>-->
+    <!--</div>-->
+    <!--<div class="gap-patch">-->
+    <!--<div class="circle"></div>-->
+    <!--</div>-->
+    <!--<div class="circle-clipper right">-->
+    <!--<div class="circle"></div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+
+</div>
+<div class="row" id="charge_sessions_row">
+    <!--<div class="col s12 m6 l4">-->
+        <!--<div class="card blue-grey darken-1 hoverable">-->
+            <!--<div class="card-content white-text">-->
+                <!--<span class="card-title center-align">None</span>-->
+                <!--<table class="">-->
+                    <!--<thead>-->
+                    <!--<tr>-->
+                        <!--<th>Description</th>-->
+                        <!--<th>Value</th>-->
+                    <!--</tr>-->
+                    <!--</thead>-->
+
+                    <!--<tbody id="dcp_reveal_table">-->
+                    <!--<tr>-->
+                        <!--<td>Charger ID</td>-->
+                        <!--<td>${chargerID}</td>-->
+                    <!--</tr>-->
+                    <!--<tr>-->
+                        <!--<td>Charge Duration</td>-->
+                        <!--<td>None</td>-->
+                    <!--</tr>-->
+                    <!--<tr>-->
+                        <!--<td>Charge Energy</td>-->
+                        <!--<td>None</td>-->
+                    <!--</tr>-->
+                    <!--</tbody>-->
+                <!--</table>-->
+                <!--<div class="right-align">-->
+                    <!--<a class="waves-effect waves-light btn modal-trigger" href="#charging_history_modal">More Info</a>-->
                 <!--</div>-->
             <!--</div>-->
         <!--</div>-->
-
-    </div>
+    <!--</div>-->
+    <!-- Modal Structure -->
+    <!--<div id="charging_history_modal" class="modal">-->
+        <!--<div class="modal-content">-->
+            <!--<h4>Test!</h4>-->
+            <!--<div id="modal_body">-->
+                <!--Hello there friend-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="modal-footer">-->
+            <!--<a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
 
 <script type="text/javascript" src="../delta_dashboard/public/js/materialize.min.js"></script>
+<script src="../delta_dashboard/public/js/jquery-3.3.1.js"></script>
+
 <script type="application/javascript" src="../delta_dashboard/public/js/charging_history2.js"></script>
 
 
