Now supports assigning system location. Fixed weather to use system long/lat. Made tweaks to some of the charts x axis labels and tooltips. Made more improvements to charging history

--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -231,7 +231,7 @@
                                 <canvas id="charger_status_pie"></canvas>
                             </div>
                             <div class="right-align">
-                                <div class="waves-effect waves-light btn">More Info...</div>
+                                <div class="waves-effect waves-light btn" onclick="location.href='/delta_dashboard/hardware_info';">More Info...</div>
                             </div>
                         </div>
                     </li>
