Fixed charging history graphs. Fixed photos on hardware info. Fixed a bug on daily charger breakdown

--- a/partials/nav.ejs
+++ b/partials/nav.ejs
@@ -27,8 +27,8 @@
 </head>
 
 <ul id="user_dropdown" class="dropdown-content">
-    <li><a href="/delta_dashboard/profile">Profile</a></li>
-    <li><a href="#" onclick="signOut()">Signout</a></li>
+    <li><a href="/delta_dashboard/profile">Settings</a></li>
+    <li><a href="#" onclick="signOut()">Sign Out</a></li>
 </ul>
 <ul id="archive_dropdown" class="dropdown-content">
     <li><a href="/delta_dashboard/history">Inverter History</a></li>
