--- a/views/charging_history2.ejs
+++ b/views/charging_history2.ejs
@@ -31,6 +31,15 @@
             background-color: #64b4f6 !important;
         }
 
+        .modal {
+            width: 70% !important;
+            max-height: 80% !important;
+        }
+
+        /*#charging_graph {*/
+            /*max-height: 80%*/
+        /*}*/
+
     </style>
 
     <!--&lt;!&ndash;Import Google Icon Font&ndash;&gt;-->
